force-app/main/default/objects/Invoice_Advance__c/Invoice_Advance__c.object-meta.xml
<CustomObject>
    <label>Invoice Advance</label>
    <nameField>
        <displayFormat>IADV-{0000}</displayFormat>
        <label>Invoice Advance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Advances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>