force-app/main/default/objects/Invoice_Advance__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Advance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Advance__c.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Invoice Advances</relationshipLabel>
    <relationshipName>Invoice_Advances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>