force-app/main/default/objects/Invoice_Advance__c/fields/Previous_Advance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Advance</label>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Invoice Advances (Previous Advance)</relationshipLabel>
    <relationshipName>Previous_Advances</relationshipName>
    <type>Lookup</type>
</CustomField>